# loxr

./: Cargo.toml  README.md  index.html  loxr.js  loxr_bg.wasm  package-lock.json  package.json
.github/workflows/: gh-pages.yml  test.yml
pkg/: index.html
src/: ast.rs  diagnosis.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  span.rs  token.rs
tests/: uitest.rs
tests/ui/error/: return.stderr
tests/ui/success/: closure.lox  closure.stdout  field.lox
