[package]
name = "loxr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = 1

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
miette = { version = "5.10.0", features = ["fancy"] }
rustc-hash = "1.1.0"
thiserror = "1.0.49"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wasm-bindgen = "0.2.89"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "12.0.0"

[dev-dependencies]
similar-asserts = "1.5.0"
